Added excludes and includes for tests, probably not finished yet